escapettu ampersandi konvertoitu oikeaksi ampersandiksi

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
           </style>
           <div id="mc_embed_signup">
-          <form action="https://osctestwebsite.us20.list-manage.com/subscribe/post?u=d4c8e3ab3c6b918d9422e3668&amp;id=62d003a019" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <form action="https://osctestwebsite.us20.list-manage.com/subscribe/post?u=d4c8e3ab3c6b918d9422e3668&id=62d003a019" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <div id="mc_embed_signup_scroll">
           <div class="mc-field-group">
           </div>
